Fix table spacing

--- a/Web/Portfolio/app/client-side/src/scss/shared.scss
+++ b/Web/Portfolio/app/client-side/src/scss/shared.scss
@@ -27,6 +27,8 @@ body {
         }
 
         table {
+            width: 100%;
+
             tr {
                 height: 60px;
                 text-align: center;
